--- a/wasmer-js-browser/index.html
+++ b/wasmer-js-browser/index.html
@@ -8,7 +8,7 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 95vh"></div>
     <script src="./index.js"></script>
   </body>
 </html>
