Use pako and gzip wasm bundle

--- a/wasmer-js-browser-glif-read-only-demo/index.html
+++ b/wasmer-js-browser-glif-read-only-demo/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div>&gt;&gt;&gt; Connecting to read only public node at https://api.node.glif.io/rpc/v0</div>
-    <div id="root" style="height: 95vh"></div>
+    <div id="status"></div>
+    <div id="root" style="height: 90vh"></div>
     <script src="./index.js"></script>
   </body>
 </html>
